--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8" />
     <link rel="icon" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Workshop</title>
+    <title>VCAD Workshop</title>
     <!-- element css cdn, if you use custom theme, remove it. -->
     <!-- <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/element-plus/dist/index.css"
     /> -->
-    <script type="module" crossorigin src="/assets/index.7b7b082d.js"></script>
+    <script type="module" crossorigin src="/assets/index.6cdcacac.js"></script>
     <link rel="stylesheet" href="/assets/index.dfeb7e9a.css">
   </head>
   <body>
