--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" href="/favicon.svg" />
+    <link rel="icon" href="/logo.8b400bd7.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>VCAD Workshop</title>
     <!-- element css cdn, if you use custom theme, remove it. -->
@@ -10,7 +10,7 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/element-plus/dist/index.css"
     /> -->
-    <script type="module" crossorigin src="/assets/index.a58b7c07.js"></script>
+    <script type="module" crossorigin src="/assets/index.f23fb77d.js"></script>
     <link rel="stylesheet" href="/assets/index.74bb17ae.css">
   </head>
   <body>
